--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -17,9 +17,23 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
     <style>
-table, th, td {
-    border: 1px solid black;
+
+    body{
+    font-family: "Comic Sans MS", cursive, sans-serif;
+	font-size: 14px;
+	font-style: large;
+	font-variant: normal;
+	font-weight: bold;
+	line-height: 15.4px;
+	text-align: center;
+
+	background-image: url("https://testdrive-archive.azurewebsites.net/performance/chalkboard/Images/EmptyChalkboard.svg");
+	padding:100px;
     border-collapse: collapse;
 }
 th, td {
@@ -28,6 +42,13 @@ th, td {
 th {
     text-align: left;
 }
+jumbo{
+    color: white;
+}
+register{
+    color: black;
+}
+
 </style>
 </head>
 <body ng-controller="SampleController">
@@ -35,12 +56,21 @@ th {
 {{! the default angularjs delimeters - https://mustache.github.io/mustache.5.html for more info }}
 {{=<% %>=}}
 
-<div style="text-align: center">
-    Welcome to Teacher's Pet
-</div>
+<font color="white">
+    <h3> Welcome to Teacher's Pet</h3>
+</font>
+
+
+
+
 
 <span ng-if="!loginContainer">
+
+
+
+<div class="container" id="jumbo">
     <div>
+
 
         <!--<h3>Login:</h3>-->
         <!--Email: <input type="text" ng-model="loginEmail"/> <br/>-->
@@ -49,30 +79,66 @@ th {
 
 
         <form class="form-inline">
-        <div class="form-group">
-            <h3>Login:</h3>
-            Email: <input type="text" ng-model="loginEmail"/> <br/>
-            Password: <input type="password"  ng-model="loginPassword" /> <br/>
-            <input type="button" ng-click="login(loginEmail, loginPassword)" value="Login"/> <br/><br/>
-            <!--<small id="passwordHelpInline" class="text-muted">-->
+            <div class="form-group">
+                <font color="white">
+                <h3>Login:</h3>
+
+                Email: <input type="text" ng-model="loginEmail"/> <br/>
+                Password: <input type="password"  ng-model="loginPassword" /> <br/>
+                      </font>
+
+                <input type="button" ng-click="login(loginEmail, loginPassword)" value="Login"/> <br/><br/></font>
+                <!--<small id="passwordHelpInline" class="text-muted">-->
                 <!--Must be 8-20 characters long.-->
-            <!--</small>-->
-        </div>
-</form>
+                <!--</small>-->
+            </div>
+        </form>
 
     </div>
+
+</div>
+
+
+
+    <!---->
+    <!--<div>-->
+
+        <!--&lt;!&ndash;<h3>Login:</h3>&ndash;&gt;-->
+        <!--&lt;!&ndash;Email: <input type="text" ng-model="loginEmail"/> <br/>&ndash;&gt;-->
+        <!--&lt;!&ndash;Password: <input type="text" ng-model="loginPassword"/> <br/>&ndash;&gt;-->
+        <!--&lt;!&ndash;<input type="button" ng-click="login(loginEmail, loginPassword)" value="Login"/> <br/><br/>&ndash;&gt;-->
+
+
+        <!--<form class="form-inline">-->
+        <!--<div class="form-group">-->
+            <!--<h3>Login:</h3>-->
+            <!--Email: <input type="text" ng-model="loginEmail"/> <br/>-->
+            <!--Password: <input type="password"  ng-model="loginPassword" /> <br/>-->
+            <!--<input type="button" ng-click="login(loginEmail, loginPassword)" value="Login"/> <br/><br/>-->
+            <!--&lt;!&ndash;<small id="passwordHelpInline" class="text-muted">&ndash;&gt;-->
+                <!--&lt;!&ndash;Must be 8-20 characters long.&ndash;&gt;-->
+            <!--&lt;!&ndash;</small>&ndash;&gt;-->
+        <!--</div>-->
+<!--</form>-->
+
+    <!--</div>-->
 
     - or -
 
-    <div>
+    <div class>
+        <font color="white">
         <h3>Register:</h3>
-        First Name: <input type="text" ng-model="registerFirstName"/> <br/>
-        Last Name: <input type="text" ng-model="registerLastName"/> <br/>
-        Email: <input type="text" ng-model="registerEmail"/> <br/>
-        Password: <input type="text" ng-model="registerPassword"/> <br/>
-        School: <input type="text" ng-model="registerSchool"/> <br/>
-        <input type="button" ng-click="register(registerFirstName, registerLastName, registerEmail, registerPassword, registerSchool)" value="Register"/>
+        First Name: <input type="text"ng-model="registerFirstName"/> <br/>
+         Last Name: <input type="text" ng-model="registerLastName"/> <br/>
+             Email: <input type="text"     ng-model="registerEmail"/> <br/>
+          Password: <input type="text"  ng-model="registerPassword"/> <br/>
+            School: <input type="text"    ng-model="registerSchool"/> <br/>
+        </font>
+        <input type="button"          ng-click="register(registerFirstName, registerLastName, registerEmail, registerPassword, registerSchool)" value="Register"/>
+
     </div>
+
+
 </span>
 
 <span ng-if="loginContainer != null">
@@ -82,33 +148,150 @@ th {
     </span>
 
     <span ng-if="loginSuccessful">
+
         Welcome, {{teacherWhoIsLoggedIn.firstName}} {{teacherWhoIsLoggedIn.lastName}}! <br/><br/>
         <div>
-            <h2>My Classes: </h2>
+            <h2>My Classes:</h2>
             <ol>
                 <span ng-repeat="course in allCourses">
                     <li>{{course.name}}, Subject: {{course.subject}}, Grade Level: {{course.gradeLevel}} <input type="button" ng-click="gradebook(course.id)" value="Gradebook"/> </li>
                 </span>
             </ol>
 
-            <input type="button" ng-click="" value="Add class (coming soon)"/>
+              <div> <!-- Trigger the modal with a button -->
+    <button type="button" id="classes" class="btn btn-default btn-lg"  data-toggle="modal" data-target="#myModals">Add Class</button>
+
+                  <!-- Modal -->
+    <div class="modal fade" id="myModals" role="dialog">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Add Class</h4>
+                </div>
+                <div class="modal-body">
+                    <div>
+                       Name: <input type="text" ng-model="newClassName"/> <br/>
+                     Subject: <input type="text" ng-model="newClassSubject"/> <br/>
+
+                        Grade Level: <input type="number" ng-model="newClassGradeLevel"/> <br/>
+                     <input type="button" ng-click="addClass(newClassName, newClassSubject, newClassGradeLevel)" value="Add class"/> <br/>
+
+
+
+
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default"  data-dismiss="modal">Close</button>
+            </div>
         </div>
+
+    </div>
+
+
+
+
+</div>
+
+            <!--<input type="button" ng-click="" value="Add class (coming soon)"/>-->
+
+
+
+
+
+
+
+
+
+
+
+        </div>
+</span>
+
+
+
+
+
         <br/><br/><br/>
 
-        *** We'll make the form below a pop-up that only shows when we click "Add class" above ***
-        <div>
 
-        <h3>Add a class: </h3>
-        Name: <input type="text" ng-model="newClassName"/> <br/>
-        Subject: <input type="text" ng-model="newClassSubject"/> <br/>
-        Grade Level: <input type="number" ng-model="newClassGradeLevel"/> <br/>
-        <input type="button" ng-click="addClass(newClassName, newClassSubject, newClassGradeLevel)" value="Add class"/> <br/>
 
-        </div>
+
+    <h2></h2>
+    <!--<div> &lt;!&ndash; Trigger the modal with a button &ndash;&gt;-->
+    <!--<button type="button" class="btn btn-default btn-lg"  data-toggle="modal" data-target="#myModals">Add Class</button>-->
+
+      <!--&lt;!&ndash; Modal &ndash;&gt;-->
+    <!--<div class="modal fade" id="myModals" role="dialog">-->
+        <!--<div class="modal-dialog">-->
+
+            <!--&lt;!&ndash; Modal content&ndash;&gt;-->
+            <!--<div class="modal-content">-->
+                <!--<div class="modal-header">-->
+                    <!--<button type="button" class="close" data-dismiss="modal">&times;</button>-->
+                    <!--<h4 class="modal-title">Add Class</h4>-->
+                <!--</div>-->
+                <!--<div class="modal-body">-->
+                    <!--<div>-->
+                       <!--Name: <input type="text" ng-model="newClassName"/> <br/>-->
+                     <!--Subject: <input type="text" ng-model="newClassSubject"/> <br/>-->
+
+                        <!--Grade Level: <input type="number" ng-model="newClassGradeLevel"/> <br/>-->
+                     <!--<input type="button" ng-click="addClass(newClassName, newClassSubject, newClassGradeLevel)" value="Add class"/> <br/>-->
+
+
+
+
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+            <!--<div class="modal-footer">-->
+                <!--<button type="button" class="btn btn-default"  data-dismiss="modal">Close</button>-->
+            <!--</div>-->
+        <!--</div>-->
+
+    <!--</div>-->
+
+
+<!--</div>-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!--<div>-->
+
+
+        <!--<h3>Add a class: </h3>-->
+        <!--Name: <input type="text" ng-model="newClassName"/> <br/>-->
+        <!--Subject: <input type="text" ng-model="newClassSubject"/> <br/>-->
+        <!--Grade Level: <input type="number" ng-model="newClassGradeLevel"/> <br/>-->
+        <!--<input type="button" ng-click="addClass(newClassName, newClassSubject, newClassGradeLevel)" value="Add class"/> <br/>-->
+
+        <!--</div>-->
 
 
 
 </span>
+
 
 </body>
 </html>
