Email functionality YAAAA

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -73,7 +73,7 @@ register{
 
 
         <!--<h3>Login:</h3>-->
-        <!--Email: <input type="text" ng-model="loginEmail"/> <br/>-->
+        <!--EmailSender: <input type="text" ng-model="loginEmail"/> <br/>-->
         <!--Password: <input type="text" ng-model="loginPassword"/> <br/>-->
         <!--<input type="button" ng-click="login(loginEmail, loginPassword)" value="Login"/> <br/><br/>-->
 
@@ -104,7 +104,7 @@ register{
     <!--<div>-->
 
         <!--&lt;!&ndash;<h3>Login:</h3>&ndash;&gt;-->
-        <!--&lt;!&ndash;Email: <input type="text" ng-model="loginEmail"/> <br/>&ndash;&gt;-->
+        <!--&lt;!&ndash;EmailSender: <input type="text" ng-model="loginEmail"/> <br/>&ndash;&gt;-->
         <!--&lt;!&ndash;Password: <input type="text" ng-model="loginPassword"/> <br/>&ndash;&gt;-->
         <!--&lt;!&ndash;<input type="button" ng-click="login(loginEmail, loginPassword)" value="Login"/> <br/><br/>&ndash;&gt;-->
 
@@ -112,7 +112,7 @@ register{
         <!--<form class="form-inline">-->
         <!--<div class="form-group">-->
             <!--<h3>Login:</h3>-->
-            <!--Email: <input type="text" ng-model="loginEmail"/> <br/>-->
+            <!--EmailSender: <input type="text" ng-model="loginEmail"/> <br/>-->
             <!--Password: <input type="password"  ng-model="loginPassword" /> <br/>-->
             <!--<input type="button" ng-click="login(loginEmail, loginPassword)" value="Login"/> <br/><br/>-->
             <!--&lt;!&ndash;<small id="passwordHelpInline" class="text-muted">&ndash;&gt;-->
